--- a/SRteacher/RP-bookList-teaching.html
+++ b/SRteacher/RP-bookList-teaching.html
@@ -23,7 +23,7 @@
 <link rel="stylesheet" type="text/css" href="Content/css/bootstrap-custom.css">
 <link rel="stylesheet" type="text/css" href="Content/css/SRv3-manager.css">
 </head>
-<body>
+<body data-sidebar="RP-bookList RP-bookList-teaching">
 <form>
   <header> </header>
   <div class="container-fluid">
@@ -375,43 +375,54 @@
                   <tr>
                     <th colspan="5"><div class="form-check form-check-inline form-check-red">
                         <input class="form-check-input" type="checkbox" name="checkAll" id="grade4">
-                        <label class="form-check-label" for="grade4">4年級</label></div></th>
+                        <label class="form-check-label" for="grade4">4年級</label>
+                      </div></th>
                   </tr>
                 </thead>
                 <tbody>
                   <tr>
                     <td class=""><div class="form-check form-check-inline form-check-red">
                         <input class="form-check-input" type="checkbox" name="check" id="grade4-class1">
-                        <label class="form-check-label" for="grade4-class1">1班</label></div></td>
+                        <label class="form-check-label" for="grade4-class1">1班</label>
+                      </div></td>
                     <td class=""><div class="form-check form-check-inline form-check-red">
                         <input class="form-check-input" type="checkbox" name="check" id="grade4-class2">
-                        <label class="form-check-label" for="grade4-class2">2班</label></div></td>
+                        <label class="form-check-label" for="grade4-class2">2班</label>
+                      </div></td>
                     <td class=""><div class="form-check form-check-inline form-check-red">
                         <input class="form-check-input" type="checkbox" name="check" id="grade4-class3">
-                        <label class="form-check-label" for="grade4-class3">3班</label></div></td>
+                        <label class="form-check-label" for="grade4-class3">3班</label>
+                      </div></td>
                     <td class=""><div class="form-check form-check-inline form-check-red">
                         <input class="form-check-input" type="checkbox" name="check" id="grade4-class4">
-                        <label class="form-check-label" for="grade4-class4">4班</label></div></td>
+                        <label class="form-check-label" for="grade4-class4">4班</label>
+                      </div></td>
                     <td class=""><div class="form-check form-check-inline form-check-red">
                         <input class="form-check-input" type="checkbox" name="check" id="grade4-class5">
-                        <label class="form-check-label" for="grade4-class5">5班</label></div></td>
+                        <label class="form-check-label" for="grade4-class5">5班</label>
+                      </div></td>
                   </tr>
                   <tr>
                     <td class=""><div class="form-check form-check-inline form-check-red">
                         <input class="form-check-input" type="checkbox" name="check" id="grade4-class6">
-                        <label class="form-check-label" for="grade4-class6">6班</label></div></td>
+                        <label class="form-check-label" for="grade4-class6">6班</label>
+                      </div></td>
                     <td class=""><div class="form-check form-check-inline form-check-red">
                         <input class="form-check-input" type="checkbox" name="check" id="grade4-class7">
-                        <label class="form-check-label" for="grade4-class7">7班</label></div></td>
+                        <label class="form-check-label" for="grade4-class7">7班</label>
+                      </div></td>
                     <td class=""><div class="form-check form-check-inline form-check-red">
                         <input class="form-check-input" type="checkbox" name="check" id="grade4-class8">
-                        <label class="form-check-label" for="grade4-class8">8班</label></div></td>
+                        <label class="form-check-label" for="grade4-class8">8班</label>
+                      </div></td>
                     <td class=""><div class="form-check form-check-inline form-check-red">
                         <input class="form-check-input" type="checkbox" name="check" id="grade4-class9">
-                        <label class="form-check-label" for="grade4-class9">9班</label></div></td>
+                        <label class="form-check-label" for="grade4-class9">9班</label>
+                      </div></td>
                     <td class=""><div class="form-check form-check-inline form-check-red">
                         <input class="form-check-input" type="checkbox" name="check" id="grade4-class10">
-                        <label class="form-check-label" for="grade4-class10">10班</label></div></td>
+                        <label class="form-check-label" for="grade4-class10">10班</label>
+                      </div></td>
                   </tr>
                 </tbody>
               </table>
@@ -420,43 +431,54 @@
                   <tr>
                     <th colspan="5"><div class="form-check form-check-inline form-check-red">
                         <input class="form-check-input" type="checkbox" name="checkAll" id="grade5">
-                        <label class="form-check-label" for="grade5">5年級</label></div></th>
+                        <label class="form-check-label" for="grade5">5年級</label>
+                      </div></th>
                   </tr>
                 </thead>
                 <tbody>
                   <tr>
                     <td class=""><div class="form-check form-check-inline form-check-red">
                         <input class="form-check-input" type="checkbox" name="check" id="grade5-class1">
-                        <label class="form-check-label" for="grade5-class1">1班</label></div></td>
+                        <label class="form-check-label" for="grade5-class1">1班</label>
+                      </div></td>
                     <td class=""><div class="form-check form-check-inline form-check-red">
                         <input class="form-check-input" type="checkbox" name="check" id="grade5-class2">
-                        <label class="form-check-label" for="grade5-class2">2班</label></div></td>
+                        <label class="form-check-label" for="grade5-class2">2班</label>
+                      </div></td>
                     <td class=""><div class="form-check form-check-inline form-check-red">
                         <input class="form-check-input" type="checkbox" name="check" id="grade5-class3">
-                        <label class="form-check-label" for="grade5-class3">3班</label></div></td>
+                        <label class="form-check-label" for="grade5-class3">3班</label>
+                      </div></td>
                     <td class=""><div class="form-check form-check-inline form-check-red">
                         <input class="form-check-input" type="checkbox" name="check" id="grade5-class4">
-                        <label class="form-check-label" for="grade5-class4">4班</label></div></td>
+                        <label class="form-check-label" for="grade5-class4">4班</label>
+                      </div></td>
                     <td class=""><div class="form-check form-check-inline form-check-red">
                         <input class="form-check-input" type="checkbox" name="check" id="grade5-class5">
-                        <label class="form-check-label" for="grade5-class5">5班</label></div></td>
+                        <label class="form-check-label" for="grade5-class5">5班</label>
+                      </div></td>
                   </tr>
                   <tr>
                     <td class=""><div class="form-check form-check-inline form-check-red">
                         <input class="form-check-input" type="checkbox" name="check" id="grade5-class6">
-                        <label class="form-check-label" for="grade5-class6">6班</label></div></td>
+                        <label class="form-check-label" for="grade5-class6">6班</label>
+                      </div></td>
                     <td class=""><div class="form-check form-check-inline form-check-red">
                         <input class="form-check-input" type="checkbox" name="check" id="grade5-class7">
-                        <label class="form-check-label" for="grade5-class7">7班</label></div></td>
+                        <label class="form-check-label" for="grade5-class7">7班</label>
+                      </div></td>
                     <td class=""><div class="form-check form-check-inline form-check-red">
                         <input class="form-check-input" type="checkbox" name="check" id="grade5-class8">
-                        <label class="form-check-label" for="grade5-class8">8班</label></div></td>
+                        <label class="form-check-label" for="grade5-class8">8班</label>
+                      </div></td>
                     <td class=""><div class="form-check form-check-inline form-check-red">
                         <input class="form-check-input" type="checkbox" name="check" id="grade5-class9">
-                        <label class="form-check-label" for="grade5-class9">9班</label></div></td>
+                        <label class="form-check-label" for="grade5-class9">9班</label>
+                      </div></td>
                     <td class=""><div class="form-check form-check-inline form-check-red">
                         <input class="form-check-input" type="checkbox" name="check" id="grade5-class10">
-                        <label class="form-check-label" for="grade5-class10">10班</label></div></td>
+                        <label class="form-check-label" for="grade5-class10">10班</label>
+                      </div></td>
                   </tr>
                 </tbody>
               </table>
@@ -465,43 +487,54 @@
                   <tr>
                     <th colspan="5"><div class="form-check form-check-inline form-check-red">
                         <input class="form-check-input" type="checkbox" name="checkAll" id="grade6">
-                        <label class="form-check-label" for="grade6">6年級</label></div></th>
+                        <label class="form-check-label" for="grade6">6年級</label>
+                      </div></th>
                   </tr>
                 </thead>
                 <tbody>
                   <tr>
                     <td class=""><div class="form-check form-check-inline form-check-red">
                         <input class="form-check-input" type="checkbox" name="check" id="grade6-class1">
-                        <label class="form-check-label" for="grade6-class1">1班</label></div></td>
+                        <label class="form-check-label" for="grade6-class1">1班</label>
+                      </div></td>
                     <td class=""><div class="form-check form-check-inline form-check-red">
                         <input class="form-check-input" type="checkbox" name="check" id="grade6-class2">
-                        <label class="form-check-label" for="grade6-class2">2班</label></div></td>
+                        <label class="form-check-label" for="grade6-class2">2班</label>
+                      </div></td>
                     <td class=""><div class="form-check form-check-inline form-check-red">
                         <input class="form-check-input" type="checkbox" name="check" id="grade6-class3">
-                        <label class="form-check-label" for="grade6-class3">3班</label></div></td>
+                        <label class="form-check-label" for="grade6-class3">3班</label>
+                      </div></td>
                     <td class=""><div class="form-check form-check-inline form-check-red">
                         <input class="form-check-input" type="checkbox" name="check" id="grade6-class4">
-                        <label class="form-check-label" for="grade6-class4">4班</label></div></td>
+                        <label class="form-check-label" for="grade6-class4">4班</label>
+                      </div></td>
                     <td class=""><div class="form-check form-check-inline form-check-red">
                         <input class="form-check-input" type="checkbox" name="check" id="grade6-class5">
-                        <label class="form-check-label" for="grade6-class5">5班</label></div></td>
+                        <label class="form-check-label" for="grade6-class5">5班</label>
+                      </div></td>
                   </tr>
                   <tr>
                     <td class=""><div class="form-check form-check-inline form-check-red">
                         <input class="form-check-input" type="checkbox" name="check" id="grade6-class6">
-                        <label class="form-check-label" for="grade6-class6">6班</label></div></td>
+                        <label class="form-check-label" for="grade6-class6">6班</label>
+                      </div></td>
                     <td class=""><div class="form-check form-check-inline form-check-red">
                         <input class="form-check-input" type="checkbox" name="check" id="grade6-class7">
-                        <label class="form-check-label" for="grade6-class7">7班</label></div></td>
+                        <label class="form-check-label" for="grade6-class7">7班</label>
+                      </div></td>
                     <td class=""><div class="form-check form-check-inline form-check-red">
                         <input class="form-check-input" type="checkbox" name="check" id="grade6-class8">
-                        <label class="form-check-label" for="grade6-class8">8班</label></div></td>
+                        <label class="form-check-label" for="grade6-class8">8班</label>
+                      </div></td>
                     <td class=""><div class="form-check form-check-inline form-check-red">
                         <input class="form-check-input" type="checkbox" name="check" id="grade6-class9">
-                        <label class="form-check-label" for="grade6-class9">9班</label></div></td>
+                        <label class="form-check-label" for="grade6-class9">9班</label>
+                      </div></td>
                     <td class=""><div class="form-check form-check-inline form-check-red">
                         <input class="form-check-input" type="checkbox" name="check" id="grade6-class10">
-                        <label class="form-check-label" for="grade6-class10">10班</label></div></td>
+                        <label class="form-check-label" for="grade6-class10">10班</label>
+                      </div></td>
                   </tr>
                 </tbody>
               </table>
@@ -510,32 +543,39 @@
                   <tr>
                     <th colspan="5"><div class="form-check form-check-inline form-check-red">
                         <input class="form-check-input" type="checkbox" name="checkAll" id="grade7">
-                        <label class="form-check-label" for="grade7">7年級</label></div></th>
+                        <label class="form-check-label" for="grade7">7年級</label>
+                      </div></th>
                   </tr>
                 </thead>
                 <tbody>
                   <tr>
                     <td class=""><div class="form-check form-check-inline form-check-red">
                         <input class="form-check-input" type="checkbox" name="check" id="grade7-class1">
-                        <label class="form-check-label" for="grade7-class1">1班</label></div></td>
+                        <label class="form-check-label" for="grade7-class1">1班</label>
+                      </div></td>
                     <td class=""><div class="form-check form-check-inline form-check-red">
                         <input class="form-check-input" type="checkbox" name="check" id="grade7-class2">
-                        <label class="form-check-label" for="grade7-class2">2班</label></div></td>
+                        <label class="form-check-label" for="grade7-class2">2班</label>
+                      </div></td>
                     <td class=""><div class="form-check form-check-inline form-check-red">
                         <input class="form-check-input" type="checkbox" name="check" id="grade7-class3">
-                        <label class="form-check-label" for="grade7-class3">3班</label></div></td>
+                        <label class="form-check-label" for="grade7-class3">3班</label>
+                      </div></td>
                     <td class=""><div class="form-check form-check-inline form-check-red">
                         <input class="form-check-input" type="checkbox" name="check" id="grade7-class4">
-                        <label class="form-check-label" for="grade7-class4">4班</label></div></td>
+                        <label class="form-check-label" for="grade7-class4">4班</label>
+                      </div></td>
                     <td class=""><div class="form-check form-check-inline form-check-red">
                         <input class="form-check-input" type="checkbox" name="check" id="grade7-class5">
-                        <label class="form-check-label" for="grade7-class5">5班</label></div></td>
+                        <label class="form-check-label" for="grade7-class5">5班</label>
+                      </div></td>
                   </tr>
                   <tr>
                     <td class=""><div class="form-check form-check-inline form-check-red">
                         <input class="form-check-input" type="checkbox" name="check" id="grade7-class6">
-                        <label class="form-check-label" for="grade7-class6">6班</label></div></td>
-                     <!--<td class=""><div class="form-check form-check-inline form-check-red">
+                        <label class="form-check-label" for="grade7-class6">6班</label>
+                      </div></td>
+                    <!--<td class=""><div class="form-check form-check-inline form-check-red">
                         <input class="form-check-input" type="checkbox" name="check" id="grade7-class7">
                         <label class="form-check-label" for="grade7-class7">7班</label></div></td>
                     <td class=""><div class="form-check form-check-inline form-check-red">
@@ -546,7 +586,7 @@
                         <label class="form-check-label" for="grade7-class9">9班</label></div></td>
                    <td class=""><div class="form-check form-check-inline form-check-red">
                         <input class="form-check-input" type="checkbox" name="check" id="grade7-class10">
-                        <label class="form-check-label" for="grade7-class10">10班</label></div></td>-->
+                        <label class="form-check-label" for="grade7-class10">10班</label></div></td>--> 
                   </tr>
                 </tbody>
               </table>
@@ -586,17 +626,6 @@
 <script src="Content/js/main.js"></script> 
 <script>
 $(document).ready(function () {
-  //call header、footer、 sidebar  
-  $('header').load('master_header.html', function () {
-    //當前頁名稱顯示
-    $('#currentPage').html($('main .SR-h2').html());
-  });
-  $('footer').load('master_footer.html');
-  $('#sidebarMenu').load('master_sidebar.html', function () {
-    //當前頁actvie
-    $('#sidebarMenu .nav-link[href*="RP-bookList"]').addClass('active');
-  });
-
   const $table = $('#teachingOverviewTable');
   //教學指定書單 datatables 
   $table.DataTable({
