--- a/SRteacher/RP-courseActivity.html
+++ b/SRteacher/RP-courseActivity.html
@@ -23,7 +23,7 @@
 <link rel="stylesheet" type="text/css" href="Content/css/SRv3-manager.css">
 </head>
 
-<body>
+<body data-sidebar="RP-courseActivity">
 <form>
   <header> </header>
   <div class="container-fluid">
@@ -195,17 +195,6 @@
 <script src="Content/js/main.js"></script> 
 <script>
 $(document).ready(function () {
-  //call header、footer、 sidebar  
-  $('header').load('master_header.html', function () {
-    //當前頁名稱顯示
-    $('#currentPage').html($('main .SR-h2').html());
-  });
-  $('footer').load('master_footer.html');
-  $('#sidebarMenu').load('master_sidebar.html', function () {
-    //當前頁actvie
-    $('#sidebarMenu .nav-link[href*="RP-courseActivity"]').addClass('active');
-  });
-
   const $table = $('#courseActivityTable');
   //datatables 
   $table.DataTable({
