--- a/SRteacher/RP-manage.html
+++ b/SRteacher/RP-manage.html
@@ -23,7 +23,7 @@
 <link rel="stylesheet" type="text/css" href="Content/css/bootstrap-custom.css">
 <link rel="stylesheet" type="text/css" href="Content/css/SRv3-manager.css">
 </head>
-<body>
+<body data-sidebar="RP-manage">
 <form>
   <header> </header>
   <div class="container-fluid">
@@ -295,18 +295,6 @@
 <script src="Content/js/main.js"></script> 
 <script>
 $(document).ready(function () {
-  //call header、footer、 sidebar  
-  $('header').load('master_header.html', function () {
-    //當前頁名稱顯示
-    $('#currentPage').html($('main .SR-h2').html());
-  });
-  $('footer').load('master_footer.html');
-  $('#sidebarMenu').load('master_sidebar.html', function () {
-    //當前頁actvie
-    $('#sidebarMenu .nav-link[href*="RP-manage"]').addClass('active');
-  });
-
-
   const $table = $('#RPmanageOverviewTable');
 
   //班級 datatables 
